fix: Removed empty css hover selector for card rotate on smaller screens media query.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -194,10 +194,6 @@
             }
         }
 
-        &:hover &__side--front {
-            // transform: rotateY(-180deg);
-        }
-
         &__details {
             padding: 1rem 3rem;
         }
